chapter-3/canary/full_switch/virtual-service.yaml
# Initial VirtualService (All traffic to v1)
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: recommendation-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - recommendation-gateway
  http:
    - match:
        - uri:
            prefix: /recommendations
      rewrite:
        uri: "/recommendations"
      route:
        - destination:
            host: recommendation-service
            subset: canary
